# insert-relevant-xkcd-discord-bot

./: AGENTS.md  Cargo.toml  README.md
bot/: Cargo.toml
bot/src/: main.rs
db/: Cargo.toml
db/examples/: check_wal.rs  pragma_test.rs
db/migrations/: 001_schema.sql
db/src/: chunks.rs  comics.rs  error.rs  lib.rs  metadata.rs  models.rs  schema.rs
web-scraper/: PLAN.md
