[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
futures = "0.3.31"
libsql = {version = "0.9.29", features = ["core"]}
serde = "1.0.228"
serde_json = "1.0.145"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0.17"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
